Update gmail account

--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,8 @@
             <ul class="space-y-3 text-sm">
               <li class="flex items-center">
                 <i class="fas fa-envelope mr-2.5 text-main-secondary"></i
-                ><a href="mailto:support@qbrain.ai" class="transition-colors"
-                  >support@qbrain.ai</a
+                ><a href="mailto:zayed.b.hamid@gmail.com" class="transition-colors"
+                  >zayed.b.hamid@gmail.com</a
                 >
               </li>
               <li class="flex items-center">
