undate the placeholder for askyour question

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -490,7 +490,7 @@
             <input
               id="main-ask-input"
               type="text"
-              placeholder="Ask your question in Bangla or English. (UPCOMING...)"
+              placeholder="Ask your question in Bangla or English..."
               class="w-full px-5 py-4 focus:outline-none placeholder-gray-500 text-base text-gray-800 bg-white"
             />
             <button
@@ -1055,7 +1055,9 @@
             <ul class="space-y-3 text-sm">
               <li class="flex items-center">
                 <i class="fas fa-envelope mr-2.5 text-main-secondary"></i
-                ><a href="mailto:zayed.b.hamid@gmail.com" class="transition-colors"
+                ><a
+                  href="mailto:zayed.b.hamid@gmail.com"
+                  class="transition-colors"
                   >zayed.b.hamid@gmail.com</a
                 >
               </li>
