feat: implement persona prompt and fix chat alignment

--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -64,7 +64,7 @@
         <div id="chatbot-messages">
           <!-- Example Message -->
           <div class="message bot-message">
-            <p>Hello! How can I help you with your SSC preparation today?</p>
+            <p>Assalamu Alaikum! I am Baseera, your personal AI study assistant. How can I help?</p>
           </div>
           <!-- Messages will be appended here -->
         </div>
