change baseera to qbrain to some place

--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -42,7 +42,7 @@
         id="loader-title"
         class="bg-clip-text text-transparent bg-gradient-to-r from-[var(--grad-from-blue)] to-[var(--grad-to-purple)]"
       >
-        Baseera
+        QBrain AI
       </h1>
       <p id="loader-subtitle">Preparing your session...</p>
     </div>
@@ -53,7 +53,7 @@
         <h1
           class="bg-clip-text text-transparent bg-gradient-to-r from-[var(--grad-from-blue)] to-[var(--grad-to-purple)]"
         >
-          Baseera
+          QBrain AI
         </h1>
         <button id="close-chatbot-btn" title="Exit Chat (Go to Homepage)">
           <i class="fas fa-times"></i>
