Optimised for SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QBrain AI - Your Personal Study Assistant for SSC Success</title>
+    <title>
+      QBrain AI - Your Personal Study Assistant for SSC Success in Bangladesh
+    </title>
+    <meta
+      name="description"
+      content="Get instant, curriculum-based answers for your SSC preparation. QBrain AI is a smart study assistant for Classes 9 & 10 in Bangladesh, trained on NCTB textbooks and past papers."
+    />
+    <meta
+      name="keywords"
+      content="SSC preparation, NCTB solution, AI study assistant, Bangladesh education, Class 9-10 guide, QBrain AI, past paper solution"
+    />
+    <!-- 4. Open Graph / Facebook Meta Tags (for social sharing) -->
+    <meta
+      property="og:title"
+      content="QBrain AI: Your AI Study Assistant for SSC Success"
+    />
+    <meta
+      property="og:description"
+      content="Get instant, curriculum-based answers for your SSC preparation. Trained on NCTB textbooks and past papers."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://qbrain-ai.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://qbrain-ai.vercel.app/og-image.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="QBrain AI" />
+    <!-- 5. Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="QBrain AI: Your AI Study Assistant for SSC Success"
+    />
+    <meta
+      name="twitter:description"
+      content="Get instant, curriculum-based answers for your SSC preparation. Trained on NCTB textbooks and past papers."
+    />
+    <!-- IMPORTANT: Replace with your image URL again -->
+    <meta
+      name="twitter:image"
+      content="https://qbrain-ai.vercel.app/og-image.png"
+    />
+    <meta name="twitter:creator" content="@xayed007" />
+    <meta name="twitter:site" content="@Yxayed007" />
+
+    <link rel="canonical" href="https://qbrain-ai.vercel.app/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <link
@@ -225,7 +272,7 @@
         <a href="#" class="flex items-center space-x-2">
           <img
             src="logo.jpg"
-            alt="QBrain AI Logo"
+            alt="QBrain AI Logo - a stylized brain icon"
             class="w-9 h-9 sm:w-10 sm:h-10 rounded-lg"
           />
           <!-- Gradient text for logo name -->
@@ -424,6 +471,8 @@
         >
           <div
             class="bg-blue-100 rounded-xl p-5 sm:p-6 transform md:hover:scale-105 transition-transform duration-300 md:rotate-1 hero-qna-container"
+            role="img"
+            aria-label="An example of QBrain AI answering a question about 'Economic Activities' in Bengali."
           >
             <div class="rounded-lg p-4 shadow-md mb-4 hero-q-card">
               <div class="flex items-start space-x-3">
