Added the meta tag from google search console

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,8 @@
     <meta name="twitter:creator" content="@xayed007" />
     <meta name="twitter:site" content="@Yxayed007" />
 
+    <meta name="google-site-verification" content="hWY_M3uBePeRTT9uESKKM-lIlLHCvF7-9tluj1sB_Jw" />
+
     <link rel="canonical" href="https://qbrain-ai.vercel.app/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
